k8s/go-app.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: go
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
        app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go-container
        image: gcr.io/lightning-asakatsu/k8s-go-app:latest
        imagePullPolicy: Always
